--- a/main.html
+++ b/main.html
@@ -8,9 +8,90 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+   
 </script>
+<div class="container">
+	<div class="row1">
+   <div class="column col-sm-4">
+  <img src="https://www.w3schools.com/howto/img_snow.jpg" alt="Snow" style="width:100%">
+  </div>
+  <div class="column col-sm-4">
+    <img src="https://www.w3schools.com/howto/img_forest.jpg" alt="Forest" style="width:100%">
+  </div>
+  <div class="column col-sm-4">
+    <img src="https://www.w3schools.com/howto/img_mountains.jpg" alt="Mountains" style="width:100%">
+  </div>
+  <div class="column col-sm-4">
+  <img src="https://www.w3schools.com/howto/img_snow.jpg" alt="Snow" style="width:100%">
+  </div>
+  <div class="column col-sm-4">
+    <img src="https://www.w3schools.com/howto/img_forest.jpg" alt="Forest" style="width:100%">
+  </div>
+  <div class="column col-sm-4">
+    <img src="https://www.w3schools.com/howto/img_mountains.jpg" alt="Mountains" style="width:100%">
+  </div>
+  <div class="column col-sm-4">
+  <img src="https://www.w3schools.com/howto/img_snow.jpg" alt="Snow" style="width:100%">
+  </div>
+  <div class="column col-sm-4">
+    <img src="https://www.w3schools.com/howto/img_forest.jpg" alt="Forest" style="width:100%">
+  </div>
+  <div class="column col-sm-4">
+    <img src="https://www.w3schools.com/howto/img_mountains.jpg" alt="Mountains" style="width:100%">
+  </div>
+  <div class="column col-sm-4">
+  <img src="https://www.w3schools.com/howto/img_snow.jpg" alt="Snow" style="width:100%">
+  </div>
+  <div class="column col-sm-4">
+    <img src="https://www.w3schools.com/howto/img_forest.jpg" alt="Forest" style="width:100%">
+  </div>
+  <div class="column col-sm-4">
+    <img src="https://www.w3schools.com/howto/img_mountains.jpg" alt="Mountains" style="width:100%">
+  </div>
+	</div>
+	
+	<div class="row2">
+   <div class="column col-sm-4">
+  <img src="https://www.w3schools.com/howto/img_snow.jpg" alt="Snow" style="width:100%">
+  </div>
+  <div class="column col-sm-4">
+    <img src="https://www.w3schools.com/howto/img_forest.jpg" alt="Forest" style="width:100%">
+  </div>
+  <div class="column col-sm-4">
+    <img src="https://www.w3schools.com/howto/img_mountains.jpg" alt="Mountains" style="width:100%">
+  </div>
+  <div class="column col-sm-4">
+  <img src="https://www.w3schools.com/howto/img_snow.jpg" alt="Snow" style="width:100%">
+  </div>
+  <div class="column col-sm-4">
+    <img src="https://www.w3schools.com/howto/img_forest.jpg" alt="Forest" style="width:100%">
+  </div>
+  <div class="column col-sm-4">
+    <img src="https://www.w3schools.com/howto/img_mountains.jpg" alt="Mountains" style="width:100%">
+  </div>
+  </div>
+		
+	<div class="row3">
+  <div class="column col-sm-4">
+  <img src="https://www.w3schools.com/howto/img_snow.jpg" alt="Snow" style="width:100%">
+  </div>
+  <div class="column col-sm-4">
+    <img src="https://www.w3schools.com/howto/img_forest.jpg" alt="Forest" style="width:100%">
+  </div>
+  <div class="column col-sm-4">
+    <img src="https://www.w3schools.com/howto/img_mountains.jpg" alt="Mountains" style="width:100%">
+  </div>
+  </div>
+	
+	<div class="row4">
+  <div class="column col-sm-4">
+  <img src="https://www.w3schools.com/howto/img_snow.jpg" alt="Snow" style="width:100%">
+  </div>
+  </div>
+  
 
+</div>
+<script type="text/javascript" src="./script.js">
 </body>
 
 </html>
