--- a/main.html
+++ b/main.html
@@ -10,81 +10,81 @@
 	<!-- the entire body must be written by student -->
    
 </script>
-<div class="container">
+<div class="container-fluid">
 	<div class="row1">
-   <div class="column col-sm-4">
+   <div class="col-sm-2">
   <img src="https://www.w3schools.com/howto/img_snow.jpg" alt="Snow" style="width:100%">
   </div>
-  <div class="column col-sm-4">
+  <div class="col-sm-2">
     <img src="https://www.w3schools.com/howto/img_forest.jpg" alt="Forest" style="width:100%">
   </div>
-  <div class="column col-sm-4">
+  <div class="col-sm-2">
     <img src="https://www.w3schools.com/howto/img_mountains.jpg" alt="Mountains" style="width:100%">
   </div>
-  <div class="column col-sm-4">
+  <div class="col-sm-2">
   <img src="https://www.w3schools.com/howto/img_snow.jpg" alt="Snow" style="width:100%">
   </div>
-  <div class="column col-sm-4">
+  <div class="col-sm-2">
     <img src="https://www.w3schools.com/howto/img_forest.jpg" alt="Forest" style="width:100%">
   </div>
-  <div class="column col-sm-4">
+  <div class="col-sm-2">
     <img src="https://www.w3schools.com/howto/img_mountains.jpg" alt="Mountains" style="width:100%">
   </div>
-  <div class="column col-sm-4">
+  <div class="col-sm-2">
   <img src="https://www.w3schools.com/howto/img_snow.jpg" alt="Snow" style="width:100%">
   </div>
-  <div class="column col-sm-4">
+  <div class="col-sm-2">
     <img src="https://www.w3schools.com/howto/img_forest.jpg" alt="Forest" style="width:100%">
   </div>
-  <div class="column col-sm-4">
+  <div class="col-sm-2">
     <img src="https://www.w3schools.com/howto/img_mountains.jpg" alt="Mountains" style="width:100%">
   </div>
-  <div class="column col-sm-4">
+  <div class="col-sm-2">
   <img src="https://www.w3schools.com/howto/img_snow.jpg" alt="Snow" style="width:100%">
   </div>
-  <div class="column col-sm-4">
+  <div class="col-sm-2">
     <img src="https://www.w3schools.com/howto/img_forest.jpg" alt="Forest" style="width:100%">
   </div>
-  <div class="column col-sm-4">
+  <div class="col-sm-2">
     <img src="https://www.w3schools.com/howto/img_mountains.jpg" alt="Mountains" style="width:100%">
   </div>
 	</div>
 	
 	<div class="row2">
-   <div class="column col-sm-4">
+   <div class="col-sm-2">
   <img src="https://www.w3schools.com/howto/img_snow.jpg" alt="Snow" style="width:100%">
   </div>
-  <div class="column col-sm-4">
+  <div class="col-sm-2">
     <img src="https://www.w3schools.com/howto/img_forest.jpg" alt="Forest" style="width:100%">
   </div>
-  <div class="column col-sm-4">
+  <div class="col-sm-2">
     <img src="https://www.w3schools.com/howto/img_mountains.jpg" alt="Mountains" style="width:100%">
   </div>
-  <div class="column col-sm-4">
+  <div class="col-sm-2">
   <img src="https://www.w3schools.com/howto/img_snow.jpg" alt="Snow" style="width:100%">
   </div>
-  <div class="column col-sm-4">
+  <div class="col-sm-2">
     <img src="https://www.w3schools.com/howto/img_forest.jpg" alt="Forest" style="width:100%">
   </div>
-  <div class="column col-sm-4">
+  <div class="col-sm-2">
     <img src="https://www.w3schools.com/howto/img_mountains.jpg" alt="Mountains" style="width:100%">
   </div>
   </div>
 		
 	<div class="row3">
-  <div class="column col-sm-4">
+  <div class="col-sm-2">
   <img src="https://www.w3schools.com/howto/img_snow.jpg" alt="Snow" style="width:100%">
   </div>
-  <div class="column col-sm-4">
+  <div class="col-sm-2">
     <img src="https://www.w3schools.com/howto/img_forest.jpg" alt="Forest" style="width:100%">
   </div>
-  <div class="column col-sm-4">
+  <div class="col-sm-2">
     <img src="https://www.w3schools.com/howto/img_mountains.jpg" alt="Mountains" style="width:100%">
   </div>
   </div>
 	
 	<div class="row4">
-  <div class="column col-sm-4">
+  <div class="col-sm-2">
   <img src="https://www.w3schools.com/howto/img_snow.jpg" alt="Snow" style="width:100%">
   </div>
   </div>
