--- a/main.html
+++ b/main.html
@@ -72,7 +72,7 @@
   </div>
 		
 	<div class="row3">
-  <div class="col-sm-2 col-sm-1 col-sm-4 col-sm-12">
+  <div class="col-sm-2" "col-sm-1" "col-sm-4 col-sm-12">
   <img src="https://www.w3schools.com/howto/img_snow.jpg" alt="Snow" style="width:100%">
   </div>
   <div class="col-sm-2 col-sm-1 col-sm-4 col-sm-12">
