--- a/main.html
+++ b/main.html
@@ -12,79 +12,79 @@
 </script>
 <div class="container-fluid">
 	<div class="row1">
-   <div class="col-sm-2 col-sm-1 col-sm-4 col-sm-12">
+   <div class="col-sm-2">
   <img src="https://www.w3schools.com/howto/img_snow.jpg" alt="Snow" style="width:100%">
   </div>
-  <div class="col-sm-2 col-sm-1 col-sm-4 col-sm-12">
+  <div class="col-sm-2">
     <img src="https://www.w3schools.com/howto/img_forest.jpg" alt="Forest" style="width:100%">
   </div>
-  <div class="col-sm-2 col-sm-1 col-sm-4 col-sm-12">
+  <div class="col-sm-2">
     <img src="https://www.w3schools.com/howto/img_mountains.jpg" alt="Mountains" style="width:100%">
   </div>
-  <div class="col-sm-2 col-sm-1 col-sm-4 col-sm-12">
+  <div class="col-sm-2">
   <img src="https://www.w3schools.com/howto/img_snow.jpg" alt="Snow" style="width:100%">
   </div>
-  <div class="col-sm-2 col-sm-1 col-sm-4 col-sm-12">
+  <div class="col-sm-2">
     <img src="https://www.w3schools.com/howto/img_forest.jpg" alt="Forest" style="width:100%">
   </div>
-  <div class="col-sm-2 col-sm-1 col-sm-4 col-sm-12">
+  <div class="col-sm-2">
     <img src="https://www.w3schools.com/howto/img_mountains.jpg" alt="Mountains" style="width:100%">
   </div>
-  <div class="col-sm-2 col-sm-1 col-sm-4 col-sm-12">
+  <div class="col-sm-2">
   <img src="https://www.w3schools.com/howto/img_snow.jpg" alt="Snow" style="width:100%">
   </div>
-  <div class="col-sm-2 col-sm-1 col-sm-4 col-sm-12">
+  <div class="col-sm-2">
     <img src="https://www.w3schools.com/howto/img_forest.jpg" alt="Forest" style="width:100%">
   </div>
-  <div class="col-sm-2 col-sm-1 col-sm-4 col-sm-12">
+  <div class="col-sm-2">
     <img src="https://www.w3schools.com/howto/img_mountains.jpg" alt="Mountains" style="width:100%">
   </div>
-  <div class="col-sm-2 col-sm-1 col-sm-4 col-sm-12">
+  <div class="col-sm-2">
   <img src="https://www.w3schools.com/howto/img_snow.jpg" alt="Snow" style="width:100%">
   </div>
-  <div class="col-sm-2 col-sm-1 col-sm-4 col-sm-12">
+  <div class="col-sm-2">
     <img src="https://www.w3schools.com/howto/img_forest.jpg" alt="Forest" style="width:100%">
   </div>
-  <div class="col-sm-2 col-sm-1 col-sm-4 col-sm-12">
+  <div class="col-sm-2">
     <img src="https://www.w3schools.com/howto/img_mountains.jpg" alt="Mountains" style="width:100%">
   </div>
 	</div>
 	
 	<div class="row2">
-   <div class="col-sm-2 col-sm-1 col-sm-4 col-sm-12">
+   <div class="col-sm-2">
   <img src="https://www.w3schools.com/howto/img_snow.jpg" alt="Snow" style="width:100%">
   </div>
-  <div class="col-sm-2 col-sm-1 col-sm-4 col-sm-12">
+  <div class="col-sm-2">
     <img src="https://www.w3schools.com/howto/img_forest.jpg" alt="Forest" style="width:100%">
   </div>
-  <div class="col-sm-2 col-sm-1 col-sm-4 col-sm-12">
+  <div class="col-sm-2">
     <img src="https://www.w3schools.com/howto/img_mountains.jpg" alt="Mountains" style="width:100%">
   </div>
-  <div class="col-sm-2 col-sm-1 col-sm-4 col-sm-12">
+  <div class="col-sm-2">
   <img src="https://www.w3schools.com/howto/img_snow.jpg" alt="Snow" style="width:100%">
   </div>
-  <div class="col-sm-2 col-sm-1 col-sm-4 col-sm-12">
+  <div class="col-sm-2">
     <img src="https://www.w3schools.com/howto/img_forest.jpg" alt="Forest" style="width:100%">
   </div>
-  <div class="col-sm-2 col-sm-1 col-sm-4 col-sm-12">
+  <div class="col-sm-2">
     <img src="https://www.w3schools.com/howto/img_mountains.jpg" alt="Mountains" style="width:100%">
   </div>
   </div>
 		
 	<div class="row3">
-  <div class="col-sm-2" "col-sm-1" "col-sm-4 col-sm-12">
+  <div class="col-sm-2">
   <img src="https://www.w3schools.com/howto/img_snow.jpg" alt="Snow" style="width:100%">
   </div>
-  <div class="col-sm-2 col-sm-1 col-sm-4 col-sm-12">
+  <div class="col-sm-2">
     <img src="https://www.w3schools.com/howto/img_forest.jpg" alt="Forest" style="width:100%">
   </div>
-  <div class="col-sm-2 col-sm-1 col-sm-4 col-sm-12">
+  <div class="col-sm-2">
     <img src="https://www.w3schools.com/howto/img_mountains.jpg" alt="Mountains" style="width:100%">
   </div>
   </div>
 	
 	<div class="row4">
-  <div class="col-sm-2 col-sm-1 col-sm-4 col-sm-12">
+  <div class="col-sm-2">
   <img src="https://www.w3schools.com/howto/img_snow.jpg" alt="Snow" style="width:100%">
   </div>
   </div>
